--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dart_vlc: ^0.4.0
   blur: ^3.1.0
   file_picker: ^5.2.5
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
