--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   dart_vlc: ^0.4.0
   blur: ^3.1.0
   file_picker: ^5.2.5
-  auto_size_text: ^3.0.0
+  # auto_size_text: ^3.0.0
   provider: ^6.0.5
 
 dev_dependencies:
