--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   dart_vlc: ^0.4.0
   blur: ^3.1.0
   file_picker: ^5.2.5
-  # auto_size_text: ^3.0.0
   provider: ^6.0.5
+  dart_casing: ^2.0.0
+  flutter_colorpicker: ^1.0.3
+  gradient_borders: ^1.0.0
 
 dev_dependencies:
   flutter_test:
