--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: scrolling_subtitles
 description: Lets you view subtitles of a video in scrolling format.
 publish_to: "none"
 
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
@@ -21,6 +21,7 @@ dependencies:
   dart_casing: ^2.0.0
   flutter_colorpicker: ^1.0.3
   gradient_borders: ^1.0.0
+  window_manager: ^0.3.6
 
 dev_dependencies:
   flutter_test:
