--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,28 +5,30 @@ publish_to: "none"
 version: 1.2.0+1
 
 environment:
-  sdk: ">=2.19.2 <3.0.0"
+  sdk: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
+  google_fonts: ^6.1.0
   subtitle: ^0.1.0-beta.3
   dart_vlc: ^0.4.0
   blur: ^3.1.0
-  file_picker: ^5.2.5
+  file_picker: ^6.0.0
   provider: ^6.0.5
-  dart_casing: ^2.0.0
-  flutter_colorpicker: ^1.0.3
+  dart_casing: ^3.0.1
   gradient_borders: ^1.0.0
   window_manager: ^0.3.6
+  flex_color_picker: ^3.3.0
+  gap: ^3.0.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
