--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   subtitle: ^0.1.0-beta.3
-  dart_vlc: ^0.4.0
   blur: ^3.1.0
   file_picker: ^6.0.0
   provider: ^6.0.5
@@ -24,6 +22,7 @@ dependencies:
   flex_color_picker: ^3.3.0
   gap: ^3.0.1
   shared_preferences: ^2.2.2
+  media_kit: ^1.1.10+1
 
 dev_dependencies:
   flutter_test:
