--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: scrolling_subtitles
 description: Lets you view subtitles of a video in scrolling format.
 publish_to: "none"
 
-version: 1.3.0+1
+version: 1.4.0
 
 environment:
   sdk: ">=3.0.0"
@@ -31,3 +31,39 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/default_colors.json
+  fonts:
+    - family: Verdana
+      fonts:
+        - asset: fonts/verdana.ttf
+        - asset: fonts/verdana-bold.ttf
+          weight: 700
+        - asset: fonts/verdana-bold-italic.ttf
+          weight: 700
+          style: italic
+    - family: Arial
+      fonts:
+        - asset: fonts/Arial.ttf
+        - asset: fonts/Arial-Italic.ttf
+          style: italic
+        - asset: fonts/Arial-Light.ttf
+          weight: 300
+        - asset: fonts/Arial-Light-Italic.ttf
+          weight: 300
+          style: italic
+        - asset: fonts/Arial-Medium.ttf
+          weight: 500
+        - asset: fonts/Arial-Medium-Italic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/Arial-Bold.ttf
+          weight: 700
+        - asset: fonts/Arial-Bold-Italic.ttf
+          weight: 700
+          style: italic
+        - asset: fonts/Arial-Black.ttf
+          weight: 900
+        - asset: fonts/Arial-Black-Italic.ttf
+          weight: 900
+          style: italic
