--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   gap: ^3.0.1
   shared_preferences: ^2.2.2
   media_kit: ^1.1.10+1
+  media_kit_libs_audio: ^1.0.4
 
 dev_dependencies:
   flutter_test:
