--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: scrolling_subtitles
 description: Lets you view subtitles of a video in scrolling format.
 publish_to: "none"
 
-version: 1.4.0
+version: 1.5.0
 
 environment:
   sdk: ">=3.0.0"
@@ -13,7 +13,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   subtitle: ^0.1.0-beta.3
-  blur: ^3.1.0
   file_picker: ^6.0.0
   provider: ^6.0.5
   dart_casing: ^3.0.1
@@ -29,6 +28,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
