--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: scrolling_subtitles
+name: visual_subs
 description: Lets you view subtitles of a video in scrolling format.
 publish_to: "none"
 
-version: 1.5.0
+version: 1.5.1-beta
 
 environment:
   sdk: ">=3.0.0"
@@ -29,6 +29,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  import_sorter: ^4.6.0
 
 flutter:
   uses-material-design: true
