Updated App name and made general android layout.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.scrolling_subtitles">
-   <application
-        android:label="scrolling_subtitles"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
+        android:label="Visual Subs"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
