--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -2,6 +2,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#202020"
   min_sdk_android: 21
   web:
     generate: true
@@ -12,6 +13,3 @@ flutter_launcher_icons:
     generate: true
     image_path: "assets/icon/icon.png"
     icon_size: 128
-  macos:
-    generate: true
-    image_path: "assets/icon/icon.png"
