--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
-  subtitle: ^0.1.0-beta.3
+  subtitle: ^0.1.0
   file_picker: ^6.0.0
   provider: ^6.0.5
   dart_casing: ^3.0.1
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.2
   media_kit: ^1.1.10+1
   media_kit_libs_audio: ^1.0.4
+  media_kit_libs_android_audio: ^1.3.6
 
 dev_dependencies:
   flutter_test:
